# SuperPascal

./: .gitignore  CONTRIBUTING.md  LICENSE  NEXT-STEPS.md  README.md  ROADMAP.md  justfile
crates/compiler-rs/: Cargo.toml
crates/compiler-rs/ast/src/: lib.rs
crates/compiler-rs/backends/backend-zealz80/src/: lib.rs
crates/compiler-rs/driver/: Cargo.toml
crates/compiler-rs/driver/src/: compiler.rs
crates/compiler-rs/errors/: Cargo.toml
crates/compiler-rs/errors/examples/: enhanced_errors.rs
crates/compiler-rs/errors/src/: lib.rs
crates/compiler-rs/ir/src/: lib.rs
crates/compiler-rs/lexer/src/: lib.rs
crates/compiler-rs/objects/object-zealz80/: Cargo.toml
crates/compiler-rs/objects/object-zealz80/src/: lib.rs
crates/compiler-rs/parser/: Cargo.toml
crates/compiler-rs/parser/benches/: parser_benchmark.rs
crates/compiler-rs/parser/src/: classes.rs  declarations.rs  expressions.rs  incremental.rs  lib.rs  query.rs  statements.rs  types.rs  units.rs
crates/compiler-rs/runtime/: Cargo.toml
crates/compiler-rs/runtime-spec/src/: capabilities.rs  lib.rs
crates/compiler-rs/runtime/src/: closure.rs  interface.rs  lib.rs  variant.rs
crates/compiler-rs/semantics/: Cargo.toml  MODULARIZATION_PLAN.md
crates/compiler-rs/semantics/src/: constants.rs  core.rs  declarations.rs  expressions.rs  feature_checker.rs  lib.rs  lvalues.rs  statements.rs  types.rs
crates/compiler-rs/tokens/src/: lib.rs
crates/compiler-rs/types/: Cargo.toml
crates/compiler-rs/types/src/: lib.rs
languageSpecification/: 00_Overview.md  01_LexicalStructure.md  02_Grammar.md  (+16 more)
(+259 files in other folders)
