[workspace]
members = [
    "tokens",
    "lexer",
    "ast",
    "errors",
    "parser",
    "types",
    "symbols",
    "semantics",
    "ir",
    "runtime-spec",
    "runtime",
    "backends/backend-zealz80",
    "objects/object-zealz80",
    "driver",
    # "diagnostics",  # Will be added in Phase 5
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Core dependencies (shared across crates)
# Add as needed
