[package]
name = "parser"
version.workspace = true
edition.workspace = true

[dependencies]
tokens = { path = "../tokens" }
ast = { path = "../ast" }
errors = { path = "../errors" }
lexer = { path = "../lexer" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_benchmark"
harness = false
